--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "transformers>=4.49.0",
     "torch>=2.6.0",
     "torchvision>=0.21.0",
+    "sentence-transformers>=3.4.1",
 ]
 
 [[tool.uv.index]]
